@@ -4,6 +4,12 @@ bingd 0.3.3
 * risk.threshold() is now a calc.threshold() and adds a verbose option 
 * add option to supply prob.risk in  calc.bayes() 
 
+* overlapsAny() is now findOverlaps(), which returns HitsList or integer vectors
+  to be consistent with with the IRanges package
+* the new featureOverlaps() function is the exported version of findOverlaps(),
+  which returns a logical vector for each feature, nested within an list that
+  mirrors the structure of the supplied FeatureList object
+
 bingd 0.3.2
 ===========
 
